--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
   </head>
   <body>
     <div class='container'>
-      <h1>Doctor Lookup</h1>
+      <h1>Portland Doctor Lookup</h1>
+      <label for="ailment">Enter an ailment:</label>
+      <input id="getAilment" type="text">
+      <button class="btn-success" id="getAilment">Find Doctors</button>
+      <div class="errors"></div>
+      <div class="showDoctorList"></div>
     </div>
   </body>
 </html>
