add first working call

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <div class='container'>
       <h1>Portland Doctor Lookup</h1>
       <label for="ailment">Enter an ailment:</label>
-      <input id="getAilment" type="text">
+      <input id="ailment" type="text">
       <button class="btn-success" id="getAilment">Find Doctors</button>
       <div class="errors"></div>
       <div class="showDoctorList"></div>
