--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
       <input id="ailment" type="text">
       <button class="btn-success" id="getAilment">Find Doctors</button>
       <div class="errors"></div>
-      <div class="showDoctorList"></div>
+      <div class="showDoctorName"></div>
+      <div class="showDoctorURL"></div>
     </div>
   </body>
 </html>
