add working error conditional

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
   <body>
     <div class='container'>
       <h1>Portland Doctor Lookup</h1>
-      <label for="ailment">Enter an ailment:</label>
-      <input id="ailment" type="text">
-      <button class="btn-success" id="getAilment">Find Doctors</button>
+
+      <label for="ailment">Enter an ailment or Doctor's Name:</label>
+      <input id="query" type="text">
+      <button class="btn-success" id="getDoctor">Find Doctors</button>
+
       <div class="errors"></div>
       <div class="showDoctor"></div>
 
